--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
 
     </div>
   </header>
-  <section class="prose dark:prose-invert"><pre tabindex="0"><code>&gt; Sup, Thanks for visting my website. 😄
+  <section class="prose dark:prose-invert"><pre tabindex="0"><code>&gt; Sup, Thanks for visiting my website. 😄
 </code></pre></section>
 </article>
 <section>
