MC server page improvements
- Improved Sentences and Grammar

--- a/nekkocraft/index.html
+++ b/nekkocraft/index.html
@@ -107,7 +107,7 @@
     
     
     "mainEntityOfPage": "true",
-    "wordCount": "85"
+    "wordCount": "86"
   }]
   </script>
 
@@ -288,11 +288,11 @@ Recommended so that <a
 
 
   </span>
-  <span class="dark:text-neutral-300">If you are <strong>Admin</strong> on this <strong>server</strong>, Please click this <a
+  <span class="dark:text-neutral-300">If your an <strong>Admin</strong> on this <strong>Server</strong>, Please click this <a
   href="https://pterodactyl.jameskitt616.one/server/5f97086b"
   
   target="_blank" rel="noreferrer noopener"
->Link</a> to access admin panel.</span>
+>Link</a> to access the admin panel.</span>
 </div>
 
 <hr>
@@ -305,7 +305,7 @@ Recommended so that <a
 <blockquote>
 <p>So that cracked accounts on the server wont easily get hacked.</p>
 </blockquote>
-<p>Who hosted this server?</p>
+<p>Who host this server?</p>
 <blockquote>
 <p><a
   href="https://jameskitt616.one/"
