Update Blog pages
- Added date updated
- Added Specs and Tools in rice.html
- etc

--- a/contact/index.html
+++ b/contact/index.html
@@ -10,7 +10,7 @@
   lang="en"
   dir="ltr"
   class="scroll-smooth"
-  data-default-appearance="dark"
+  data-default-appearance="light"
   data-auto-appearance="true"
 ><head>
   <meta charset="utf-8" />
@@ -91,7 +91,7 @@
     "name": "Contact",
     "headline": "Contact",
     "description": "contact me here",
-    "abstract": "Email # Discord: Himikaturu#7445 # Discord Server # Matrix: @kaizo:envs.",
+    "abstract": "Email Discord: Himikaturu#7445 Discord Server Matrix: @kaizo:envs.",
     "inLanguage": "en",
     "url" : "https:\/\/alisyus.xyz\/contact\/",
     "author" : {
@@ -107,7 +107,7 @@
     
     
     "mainEntityOfPage": "true",
-    "wordCount": "13"
+    "wordCount": "9"
   }]
   </script>
 
@@ -276,7 +276,7 @@
   href="azairus.jl9ke@slmail.me"
   
   
->Email</a> <span class="absolute top-0 w-6 transition-opacity opacity-0 ltr:-left-6 rtl:-right-6 not-prose group-hover:opacity-100"><a class="group-hover:text-primary-300 dark:group-hover:text-neutral-700" style="text-decoration-line: none !important;" href="#hahahugoshortcode-s0-hbhb-emailazairusjl9keslmailme" aria-label="Anchor">#</a></span></h3>
+>Email</a> </h3>
 <h3 id="hahahugoshortcode-s1-hbhb-discord-himikaturu7445" class="relative group">
 
   <span class="relative inline-block align-text-bottom icon">
@@ -284,12 +284,12 @@
 
   </span>
 
- Discord: <strong>Himikaturu#7445</strong> <span class="absolute top-0 w-6 transition-opacity opacity-0 ltr:-left-6 rtl:-right-6 not-prose group-hover:opacity-100"><a class="group-hover:text-primary-300 dark:group-hover:text-neutral-700" style="text-decoration-line: none !important;" href="#hahahugoshortcode-s1-hbhb-discord-himikaturu7445" aria-label="Anchor">#</a></span></h3>
+ Discord: <strong>Himikaturu#7445</strong> </h3>
 <h3 id="discord-serverhttpsdiscordcominviteryhsqahmqz" class="relative group"><a
   href="https://discord.com/invite/ryhSqAhmQz"
   
   target="_blank" rel="noreferrer noopener"
->Discord Server</a> <span class="absolute top-0 w-6 transition-opacity opacity-0 ltr:-left-6 rtl:-right-6 not-prose group-hover:opacity-100"><a class="group-hover:text-primary-300 dark:group-hover:text-neutral-700" style="text-decoration-line: none !important;" href="#discord-serverhttpsdiscordcominviteryhsqahmqz" aria-label="Anchor">#</a></span></h3>
+>Discord Server</a> </h3>
 <h3 id="hahahugoshortcode-s2-hbhb-matrix-kaizoenvsnet" class="relative group">
 
   <span class="relative inline-block align-text-bottom icon">
@@ -297,7 +297,7 @@
 
   </span>
 
- Matrix: <strong>@kaizo:envs.net</strong> <span class="absolute top-0 w-6 transition-opacity opacity-0 ltr:-left-6 rtl:-right-6 not-prose group-hover:opacity-100"><a class="group-hover:text-primary-300 dark:group-hover:text-neutral-700" style="text-decoration-line: none !important;" href="#hahahugoshortcode-s2-hbhb-matrix-kaizoenvsnet" aria-label="Anchor">#</a></span></h3>
+ Matrix: <strong>@kaizo:envs.net</strong> </h3>
 <p><a
   href="https://matrix.to/#/#delux:envs.net"
   
