--- a/nekkocraft/index.html
+++ b/nekkocraft/index.html
@@ -10,7 +10,7 @@
   lang="en"
   dir="ltr"
   class="scroll-smooth"
-  data-default-appearance="dark"
+  data-default-appearance="light"
   data-auto-appearance="true"
 ><head>
   <meta charset="utf-8" />
@@ -107,7 +107,7 @@
     
     
     "mainEntityOfPage": "true",
-    "wordCount": "86"
+    "wordCount": "85"
   }]
   </script>
 
@@ -296,7 +296,7 @@ Recommended so that <a
 </div>
 
 <hr>
-<h2 id="faqs" class="relative group">FAQs <span class="absolute top-0 w-6 transition-opacity opacity-0 ltr:-left-6 rtl:-right-6 not-prose group-hover:opacity-100"><a class="group-hover:text-primary-300 dark:group-hover:text-neutral-700" style="text-decoration-line: none !important;" href="#faqs" aria-label="Anchor">#</a></span></h2>
+<h2 id="faqs" class="relative group">FAQs </h2>
 <p>What happend to the wiki?</p>
 <blockquote>
 <p>It has been abandoned.</p>
