--- a/privacy/index.html
+++ b/privacy/index.html
@@ -10,7 +10,7 @@
   lang="en"
   dir="ltr"
   class="scroll-smooth"
-  data-default-appearance="dark"
+  data-default-appearance="light"
   data-auto-appearance="true"
 ><head>
   <meta charset="utf-8" />
@@ -107,7 +107,7 @@
     
     
     "mainEntityOfPage": "true",
-    "wordCount": "101"
+    "wordCount": "100"
   }]
   </script>
 
@@ -269,7 +269,7 @@
   href="https://alisyus.xyz"
   
   target="_blank" rel="noreferrer noopener"
->https://alisyus.xyz</a>, Himikaturu. <span class="absolute top-0 w-6 transition-opacity opacity-0 ltr:-left-6 rtl:-right-6 not-prose group-hover:opacity-100"><a class="group-hover:text-primary-300 dark:group-hover:text-neutral-700" style="text-decoration-line: none !important;" href="#the-creator-of-httpsalisyusxyz-himikaturu" aria-label="Anchor">#</a></span></h3>
+>https://alisyus.xyz</a>, Himikaturu. </h3>
 <p>Does not collect data, log IP addresses, or ask for any personally identifying or anonymous information. This website does not utilize cookies.</p>
 <p>There may be links to other websites on this website. You will be routed to a third-party site if you click on a third-party link. Please note that I am not responsible for the content of any external websites. As a result, I recommend that you read the Privacy Policies of these websites. I have no control over and assume no responsibility for any third-party website or services&rsquo; content, privacy policies, or practices.</p>
 
